--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,152 +1,235 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chat WebApp</title>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/styles.css') }}">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<title>Perspective Template, free css template</title>
+	<meta name="keywords" content="Perspective Template, free css template, download" />
+	<meta name="description" content="Perspective Template - Download free css template" />
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/templatemo_style.css') }}">
 </head>
 <body>
-    <table width="90%" align="center" border="0">
-		<tr>
-		    <td>
-                <img src="static/images/logo.png" align="right" width="50" height="50" style="border-radius: 50%">*
-            </td>
-			<td>
-				<a href="https://www.mousquetaires.com/notre-groupement/">NOTRE GROUPEMENT</a>
-				<a href="https://www.mousquetaires.com/nos-engagements/">NOS ENGAGEMENTS</a>
-				<a href="https://www.mousquetaires.com/nos-enseignes/">NOS ENSEIGNES</a>
-				<a href="https://www.mousquetaires.com/nos-filiales/">NOS FILIALES</a>
-				<a href="https://www.mousquetaires.com/nos-actualites/">NOS ACTUALITES</a>
-			</td>
-			<td></td>
-		</tr>
-		<tr style="height:530px">
-			<td width="15%" valign="top" align="right"><br/>
-				<img src="static/images/astro.png" align="right" width="150" height="310" style="border-radius: 5%; opacity: 0.3">
-			</td>
-			<td width="70%" valign="top"><br/>
-				<div id="chat-container">
-					<img src="static/images/logo.png" align="left" width="160" height="100"><br/>
-					<h2><i>CHATBOT RH LES MOUSQUETAIRES</i></h2><br/><br/>
-					<div id="chat-box">
-						<!-- Chat messages will be displayed here -->
+	<div id="templatemo_header_wrapper">
+		<!--  Free Web Templates by TemplateMo.com  -->
+		<div id="templatemo_header">
+			<div id="site_title">
+				<a href="#" target="_parent"><br/><br/><i>STIME IA</i></a>
+				<span><br/><i>Venez discuter avec le chatbot</i></span>        
+			</div>
+		</div>
+	</div> <!-- end of header -->
+
+	<div id="templatemo_content_wrapper">
+		<div id="templatemo_content">
+		
+			<div id="templatemo_menu">
+				<div id="templatemo_menu_left"></div>
+				<ul>
+					<li><a href="index.html" class="current">Accueil</a></li>
+					<li><a href="#" target="_parent">Actualités</a></li>
+					<li><a href="#" target="_parent">Gallery</a></li>
+					<li><a href="#" target="_parent">Groupement</a></li>
+					<li><a href="#">À propos</a></li>
+					<li><a href="#" class="last">Contact</a></li>
+				</ul>    	
+			</div> <!-- end of menu -->
+
+			<div id="content_column">
+				<div class="post_section">
+					<div class="header_01">Posez votre question ici</div>
+					<div class="post_info"><i>Astro ne va pas tarder à vous répondre</i></div>
+				
+					<div id="chat-container">
+						<div id="chat-box">
+							<!-- Chat messages will be displayed here -->
+						</div>
+						<textarea rows="7"id="user-input" placeholder="Veuillez écrire votre question"></textarea>
+						<div style="text-align: center;">
+							<button id="send-button">Envoyer</button>
+							<button id="clear-button" class="clear-button">Effacer la conversation</button>
+						</div>
+						<div id="loading-indicator">
+							<div class="lds-ring"><div></div><div></div><div></div><div></div></div>
+						</div>
 					</div>
-					<textarea rows="7"id="user-input" placeholder="Veuillez taper votre question et cliquez sur envoyer"></textarea>
-					<div style="text-align: center;">
-						<button id="send-button">Envoyer</button>
-						<button id="clear-button" class="clear-button">Effacer la conversation</button>
-					</div>
-					<div id="loading-indicator">
-						<div class="lds-ring"><div></div><div></div><div></div><div></div></div>
-					</div>
+					
+					<script>
+						const chatBox = document.getElementById("chat-box");
+						const userInput = document.getElementById("user-input");
+						const sendButton = document.getElementById("send-button");
+						const clearButton = document.getElementById("clear-button");
+						const loadingIndicator = document.getElementById("loading-indicator");
+						sendButton.disabled = true;
+						sendButton.addEventListener("click", handleUserInput);
+						userInput.addEventListener("keydown", (event) => {
+							if (event.key === "Enter") {
+								handleUserInput();
+							}
+
+						});
+						userInput.addEventListener("keyup", (event) => {
+							const userMessage = userInput.value;
+							//console.log("message '"+userMessage+"' length: "+userMessage .length);
+							if (event.key === "Enter") {
+								return;
+							}
+							if (userMessage .length === 0) {
+								sendButton.disabled = true;
+							}else{
+								sendButton.disabled = false; 
+							}
+						});
+
+						clearButton.addEventListener("click", () => {
+							chatBox.innerHTML = "";
+						});
+
+						async function handleUserInput() {
+							const userMessage = userInput.value;
+							const apiUrl = 'gateway/chat/invocations';
+
+							if (userMessage) {
+								sendButton.disabled = true; // Disable the send button
+								loadingIndicator.style.display = "block"; // Show loading indicator
+
+								// Simulate API call with a 2-second delay
+								/*
+								setTimeout(() => {
+									const mockResponse = "This is a mock response from the API.";
+									// Display the response in the chat box
+									displayMessage("User", userMessage, true);
+									displayMessage("Assistant", mockResponse, false);
+									userInput.value = "";
+									sendButton.disabled = true;
+
+									// Re-enable the send button and hide the loading indicator
+									//sendButton.disabled = false;
+									loadingIndicator.style.display = "none";
+								}, 2000); // 2-second delay
+								*/
+
+								const response = await fetch(apiUrl, {
+									method: 'POST',
+									headers: {
+										'Content-Type': 'application/json'
+									},
+									body: JSON.stringify({"query": userMessage})
+								});
+								const data = await response.json();
+								console.log(data);
+								const rep = data.predictions[0].answer
+								console.log(rep)
+								displayMessage("User", userMessage, true);
+								displayMessage("Assistant", rep, false);
+								loadingIndicator.style.display = "none";
+								userInput.value = "";
+								sendButton.disabled = true;
+							}
+						}
+
+						function displayMessage(role, content, isUser) {
+							const messageContainer = document.createElement("div");
+							if (isUser) {
+								messageContainer.classList.add("user-message-container");
+							} else {
+								messageContainer.classList.add("assistant-message-container");
+							}
+
+							const messageLabel = document.createElement("span");
+							messageLabel.classList.add("message-label");
+							messageLabel.innerText = role;
+
+							const messageDiv = document.createElement("div");
+							messageDiv.classList.add("message");
+							if (isUser) {
+								messageDiv.classList.add("user-message");
+							} else {
+								messageDiv.classList.add("assistant-message");
+							}
+							messageDiv.innerText = content;
+
+							messageContainer.appendChild(messageLabel);
+							messageContainer.appendChild(messageDiv);
+							chatBox.appendChild(messageContainer);
+						}
+					</script>
+					
+					
+					
+					
+					<br/><br/><br/><br/><hr width="100%"/><br/>
+					<div class="post_content">
+						
+						<p>
+						Un chatbot, ou dialogueur ou encore agent conversationnel, est un agent logiciel qui dialogue avec un utilisateur.                
+						</p>
+					<p>
+					Il existe différents types de chatbots :
+
+						<br/>- les chatbots simples, basés sur des règles : ces bots fonctionnent sur la base de questions et de scénarios prédéfinis, en suivant une arborescence de conversation linéaire. En général, ce type de chatbot propose à l’utilisateur d’interagir en appuyant sur des boutons, qui redirigent ensuite vers les différents scénarios.
+						<br/>- les chatbots intelligents, qui utilisent l’IA : ces bots ont la capacité de comprendre le langage naturel, et peuvent décortiquer les phrases pour analyser l’intention de l’utilisateur. De ce fait, à chaque échange, ces chatbots améliorent un peu plus leurs performances grâce au système de machine learning (apprentissage automatique). À titre d’exemple, un chatbot intelligent aura la capacité de comprendre un mot mal orthographié, tandis qu’un chatbot simple ne pourra pas donner de réponse.
+						<br/>- les chatbots hybrides : ces bots vont mêler l’intelligence artificielle et l’intervention humaine. Concrètement, si l’agent conversationnel n’arrive pas à satisfaire la requête d’un internaute, un agent humain prendra le relai.
+					</p>
+					</div>	
+					<hr width="100%"/>				
 				</div>
-			</td>
-			<td width="15%" valign="top" align="left">
-			</td>
-		</tr>
-		</table>
-
-    <script>
-        const chatBox = document.getElementById("chat-box");
-        const userInput = document.getElementById("user-input");
-        const sendButton = document.getElementById("send-button");
-        const clearButton = document.getElementById("clear-button");
-        const loadingIndicator = document.getElementById("loading-indicator");
-        sendButton.disabled = true;
-        sendButton.addEventListener("click", handleUserInput);
-        userInput.addEventListener("keydown", (event) => {
-            if (event.key === "Enter") {
-                handleUserInput();
-            }
-
-        });
-        userInput.addEventListener("keyup", (event) => {
-            const userMessage = userInput.value;
-            //console.log("message '"+userMessage+"' length: "+userMessage .length);
-            if (event.key === "Enter") {
-                return;
-            }
-            if (userMessage .length === 0) {
-                sendButton.disabled = true;
-            }else{
-                sendButton.disabled = false; 
-            }
-        });
-
-        clearButton.addEventListener("click", () => {
-            chatBox.innerHTML = "";
-        });
-
-        async function handleUserInput() {
-            const userMessage = userInput.value;
-            const apiUrl = 'gateway/chat/invocations';
-
-            if (userMessage) {
-                sendButton.disabled = true; // Disable the send button
-                loadingIndicator.style.display = "block"; // Show loading indicator
-
-                // Simulate API call with a 2-second delay
-                /*
-                setTimeout(() => {
-                    const mockResponse = "This is a mock response from the API.";
-                    // Display the response in the chat box
-                    displayMessage("User", userMessage, true);
-                    displayMessage("Assistant", mockResponse, false);
-                    userInput.value = "";
-                    sendButton.disabled = true;
-
-                    // Re-enable the send button and hide the loading indicator
-                    //sendButton.disabled = false;
-                    loadingIndicator.style.display = "none";
-                }, 2000); // 2-second delay
-                */
-
-                const response = await fetch(apiUrl, {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json'
-                    },
-                    body: JSON.stringify({"query": userMessage})
-                });
-
-                const data = await response.json();
-                console.log(data);
-                const rep = data.predictions[0].answer
-                console.log(rep)
-                displayMessage("User", userMessage, true);
-                displayMessage("Assistant", rep, false);
-                loadingIndicator.style.display = "none";
-                userInput.value = "";
-                sendButton.disabled = true;
-            }
-        }
-
-        function displayMessage(role, content, isUser) {
-            const messageContainer = document.createElement("div");
-            if (isUser) {
-                messageContainer.classList.add("user-message-container");
-            } else {
-                messageContainer.classList.add("assistant-message-container");
-            }
-
-            const messageLabel = document.createElement("span");
-            messageLabel.classList.add("message-label");
-            messageLabel.innerText = role;
-
-            const messageDiv = document.createElement("div");
-            messageDiv.classList.add("message");
-            if (isUser) {
-                messageDiv.classList.add("user-message");
-            } else {
-                messageDiv.classList.add("assistant-message");
-            }
-            messageDiv.innerText = content;
-
-            messageContainer.appendChild(messageLabel);
-            messageContainer.appendChild(messageDiv);
-            chatBox.appendChild(messageContainer);
-        }
-    </script>
+							
+			</div> <!-- end of content column -->
+					
+			<div id="side_column_wrapper">
+			<div id="side_column">
+					
+					<div class="section_w260">
+						<div class="ads_125_125 margin_right_10">
+							<a href="#"><img src="static/css/images/astro2.png" alt="image" /></a>
+						</div>
+						<div class="ads_125_125">
+							<a href="#"><img src="static/css/images/stime_logo.jpg" alt="image" /></a>
+						</div>
+						<div class="ads_125_125 margin_right_10">
+							<a href="#"><img src="static/css/images/stime_logo.jpg" alt="image" /></a>
+						</div>
+						<div class="ads_125_125">
+							<a href="#"><img src="static/css/images/astro2.png" alt="image" /></a>
+						</div>
+						
+						<div class="cleaner"></div>
+					</div>
+					
+					<div class="section_w260">
+						<div class="header_02">Actualités en temps réel</div>
+						<div class="recent_post">
+						<div class="header_04"><a href="#">28 novembre 2023</a></div>
+							Bricorama et Accenture s’associent pour lancer pAInt, l’expert peinture alimenté par l’Intelligence Artificielle (IA) générative
+						</div>
+						
+						<div class="recent_post">
+						<div class="header_04"><a href="#">16 novembre 2023</a></div>
+							Le Groupement Les Mousquetaires se mobilise à l’occasion de la SEEPH avec une opération audacieuse, « Tous Mousquetaires »
+						</div>
+						
+						<div class="recent_post"><div class="header_04"><a href="#">30 novembre 2023</a></div>
+							Le Groupement Les Mousquetaires s’engage à accueillir jusqu’à 6 000 stagiaires de seconde en juin 2024
+					</div>    
+					</div>
+					
+					<div class="section_w260">
+						<div class="header_02">Voir plus ..</div>
+						<ul class="side_column_list">
+							<li><a href="#" target="_blank">Intermarché innove</a></li>
+							<li><a href="#" target="_parent">L'Ecole des métiers</a></li>
+							<li><a href="#" target="_parent">Intermarché renforce</a></li>
+							<li><a href="#" target="_blank">Netto lance</a></li>
+							<li><a href="#">Le groupement</a></li>
+						</ul>
+					</div> 
+						
+			</div> <!-- end of side column -->
+			</div>
+			
+			<div class="cleaner"></div>
+		</div> <!-- end of content -->
+		
+		<div class="cleaner"></div>
+	</div> <!-- end of content wrapper -->
 </body>
 </html>
