--- a/app/static/css/templatemo_style.css
+++ b/app/static/css/templatemo_style.css
@@ -1,15 +1,16 @@
 /*
 CSS Credit: http://www.templatemo.com/
 */
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap');
 
 body {
 	margin: 0;
 	padding: 0;
 	line-height: 1.5em;
-	font-family:Arial, Helvetica, sans-serif;
+	font-family:'Lato', sans-serif;
 	font-size: 12px;
-	color: #383737;
-	background: #ffffff;
+	color: #333;
+	background: #d8c9c6;
 }
 		
 a:link, a:visited { color: #11c9c7; text-decoration: none; font-weight: normal;} 
