--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,8 +12,7 @@
 		<!--  Free Web Templates by TemplateMo.com  -->
 		<div id="templatemo_header">
 			<div id="site_title">
-				<a href="#" target="_parent"><br/><br/><i>Bienvenue sur le chatbot RH de la STIME</i></a>
-				<span><br/><i>Venez discuter avec le chatbot</i></span>        
+				<a href="#" target="_parent"><br/><br/><br/><i>Bienvenue sur le chatbot RH de la STIME</i></a>   
 			</div>
 		</div>
 	</div> <!-- end of header -->
